# dirty_algorithm

./: .gitignore  README.md
base64_lib/: README.md
base64_lib/src/: CMakeLists.txt  base64.cpp
base64_lib/test/: demo  demo.cpp  makefile
crc32_lib/: crc32.cpp  demo  makefile
des_lib/: CMakeLists.txt
des_lib/include/: des.h
des_lib/src/: CMakeLists.txt  demo  des.cpp
des_lib/test/: demo.cpp  makefile
documents/: 从FIPS 46-3中理解DES算法.md  从RFC1321中理解MD5算法.md  从RFC2040中理解RC5算法.md  从RFC3174中理解SHA1算法.md  从RFC6234中理解SHA2-256算法.md  从RFC中理解Base64算法.md  从rfc理解md5算法.md  探讨关于Base64算法的魔改方式.md  探讨关于CRC32算法的魔改方式.md  探讨关于MD5算法的魔改方式 copy.md  探讨关于RC4算法的魔改方式.md  探讨关于SHA1算法的魔改方式.md  理解CRC32算法.md  理解RC4算法.md
md5/src/: md5.cpp
md5_lib/: README.md
md5_lib/bulid/: run.sh
md5_lib/include/: md5.h
md5_lib/src/: CMakeLists.txt  md5.cpp
md5_lib/test/: demo.cpp  makefile
notes/: md5.txt
rc5_lib/include/: rc5.h
rc5_lib/src/: CMakeLists.txt  rc5.cpp
rc5_lib/test/: demo  demo.cpp  makefile
sha1_lib/: README.md
sha1_lib/include/: sha1.h
sha1_lib/src/: CMakeLists.txt  sha1.cpp
sha1_lib/test/: demo  demo.cpp  makefile
sha256_lib/: rfc3174.txt  rfc6234.txt
sha256_lib/include/: sha256.h
sha256_lib/src/: CMakeLists.txt  sha256.cpp
sha256_lib/test/: demo  demo.cpp  makefile
