SET(CMAKE_CXX_FLAGS " -g -Wall -o2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(base64_lib_path ${PROJECT_SOURCE_DIR}/lib)
SET(base64_src_path ${PROJECT_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${base64_src_path} X_SRC)
ADD_LIBRARY(base64 STATIC ${X_SRC})

SET_TARGET_PROPERTIES(base64 PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${base64_lib_path}")
