SET(CMAKE_CXX_FLAGS " -g -Wall -o2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(des_lib_path ${PROJECT_SOURCE_DIR}/lib)
SET(des_src_path ${PROJECT_SOURCE_DIR}/src)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${des_src_path} X_SRC)
ADD_LIBRARY(des STATIC ${X_SRC})

SET_TARGET_PROPERTIES(des PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${des_lib_path}")
